--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,8 @@
-rvm: '2.2.1'
-script: 
-  - bundle exec rspec spec
-  - bundle exec cucumber
+language: ruby
+rvm:
+ - "1.8.7"
+ - "1.9.2"
+ - "1.9.3"
+ - rbx
+# uncomment this line if your project needs to run something other than `rake`:
+# script: bundle exec rspec spec
